# cpsh

./: .gitignore  CMakeLists.txt  INSTALLATION.md  Makefile  README.md  shell  shell.c  uninstall.sh
docs/: INSTALLATION.md  README.md
include/: builtins.h  common.h  cpsh.h  executor.h  history.h  input.h  prompt.h  shell.h  signal_handlers.h
src/: builtins.c  cpsh.c  executor.c  history.c  input.c  main.c  prompt.c  shell.c  signal_handlers.c
